# era_vm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bench_results.py  generate_asm.py  generate_asm.sh  move_artifacts.sh  rocksdb.rs
deployment_benchmarks_sources/: factorial_it.sol  factorial_rec.sol  fibonacci_it.sol  fibonacci_rec.sol  send.sol
docs/: evm_vs_eravm.md  general.md  introduction.md  opcodes.md  zksync-era-integration.md
programs/: add.zasm  add_and_sub_with_conditionals.zasm  add_conditional.zasm  add_conditional_eq.zasm  add_conditional_gt.zasm  add_conditional_not_eq.zasm  add_ptr.zasm  add_ptr_diff_too_big.zasm  add_ptr_r2_set.zasm  add_ptr_stack.zasm  add_ptr_with_swap.zasm  add_remove_tag_pointer.zasm  add_sets_gt_flag.zasm  add_sets_overflow.zasm  add_stack.zasm  add_stack_with_push.zasm  add_sub_do_not_modify_flags.zasm  add_uses_far_call_to_call_sub.zasm  add_with_costs.zasm  all_modifiers.zasm  and.zasm  and_conditional_jump.zasm  aux_heap_gas.zasm  aux_heap_store_gas.zasm  context_caller.zasm  context_code_address.zasm  context_ergs_left.zasm  context_get_context_u128.zasm  context_increment_tx_number.zasm  context_meta.zasm  context_set_context_u128.zasm  context_sp.zasm  context_this.zasm  div.zasm  div_codepage.zasm  div_conditional_gt.zasm  div_quotient.zasm  div_remainder.zasm  div_set_eq_flag.zasm  div_set_gt_flag.zasm  (+97 more)
scripts/: README.md  binop_autogen.zasm  generate_asm.md  generate_asm.py
src/: address_operands.rs  call_frame.rs  debug.rs  decommit.rs  eravm_error.rs  execution.rs  heaps.rs  lib.rs  main.rs  opcode.rs  (+11 more)
(+315 files in other folders)
