[package]
name = "era_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
u256 = { package = "primitive-types", version = "0.12.1" }
zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.5.1" }
rocksdb = "0.21.0"
thiserror = "1.0.61"
lazy_static = "1.5.0"
